--- a/estilo.css
+++ b/estilo.css
@@ -164,4 +164,28 @@ footer {
     max-width: 800px; 
 }
 
+.container {  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+  grid-template-rows: 1fr 0.5fr 1fr 1fr 1fr 1fr 1fr;
+  gap: 0px 0px;
+  grid-auto-flow: row;
+}
+
+.Main { grid-area: 1 / 1 / 2 / 7; }
+
+.titulo { grid-area: 2 / 1 / 3 / 7; }
+
+.Img1 { grid-area: 3 / 3 / 5 / 5; }
+
+.Img2 { grid-area: 3 / 5 / 5 / 7; }
+
+.Img3 { grid-area: 5 / 3 / 7 / 5; }
+
+.Img4 { grid-area: 5 / 5 / 7 / 7; }
+
+.aside1 { grid-area: 3 / 1 / 7 / 3; }
+
+.footer { grid-area: 7 / 1 / 8 / 7; }
+
+.logo { grid-area: 1 / 1 / 2 / 2; }
 
